RESOLVED FIXED270867
[WPE] DRM device detection does not work for imx.8 boards
https://bugs.webkit.org/show_bug.cgi?id=270867
Summary [WPE] DRM device detection does not work for imx.8 boards
Alejandro G. Castro
Reported 2024-03-12 11:51:51 PDT
In case of imx.8 boards there kms device does not have the boot vga flag and in that situation the loop is not correctly keeping the previous kms capable device data alive.
Attachments
Alejandro G. Castro
Comment 1 2024-03-12 12:08:22 PDT
EWS
Comment 2 2024-03-15 05:18:22 PDT
Committed 276150@main (84313c5961f1): <https://commits.webkit.org/276150@main> Reviewed commits have been landed. Closing PR #25783 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.