[WPE] DRM device detection does not work for imx.8 boards https://bugs.webkit.org/show_bug.cgi?id=270867

Reviewed by Carlos Garcia Campos.

In case of imx.8 boards the kms device does not have the boot
VGA flag and in that situation the loop is not correctly keeping
the previous kms capable device data alive.

* Source/WebKit/WPEPlatform/wpe/drm/WPEDisplayDRM.cpp:
(findDevice): Use a struct to return the fd and fileName, rework the
loop to copy and save the references even in case we traverse
all the devices. Fix name typo.
(wpeDisplayDRMConnect): Use the new struct to get the values from
the findDevice.

Canonical link: https://commits.webkit.org/276150@main